# santu-rio-pad-forum-thinkpads

./: .gitignore  README.md  angel.css  base.html  base.php  footer.php  header.php  index.html  index.php  legendary.php  s.html  style.css
assets/css/: style.css
backend/: Cargo.toml
backend/src/: auth.rs  forum.rs  main.rs  models.rs  pages.rs  users.rs  utils.rs
components/: header.html
includes/: footer.html
pages/posts/: modantena.html  modcooler.html
pages/thinkpads/: thinkpad-701c.html  thinkpad-t480.html  thinkpad-w700ds.html
pages/u/login/: index.html
pages/u/register/: index.html  index.php
s/: post.html
thinkpads/: thinkpad-701c.php  thinkpad-t480.php  thinkpad-w700ds.php
u/: login.html  register.html
u/login/: index.php
usuarios/: burddan.php
