[package]
name = "santuario-thinkpad"
version = "0.1.0"
edition = "2021"
 
[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
 
